# ur5_ass

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
launch/: ur5_simu.launch  ur5move.launch
msg/: ObjectPose.msg  TargetPose.msg
src/: Untitled Document 1  frame.cpp  frame1.cpp  frame2.cpp  icp.cpp  icp1.cpp  icp2.cpp  icp_kinect2.cpp  pointcloud2objectpose.cpp  pointcloud2placepose.cpp  ur5move.cpp
src/pcd/: asymmetry.pcd  cylinder4.pcd  cylinder9.pcd  rectangular2.pcd  rectangular9.pcd
